Fix overlay & modal z-index

--- a/app/core_css/_atoms.scss
+++ b/app/core_css/_atoms.scss
@@ -123,10 +123,16 @@
 
 .z-1000 {
   z-index: 1000;
+  * {
+    z-index: 9000;
+  }
 }
 
 .z-9000 {
   z-index: 9000;
+  * {
+    z-index: 9000;
+  }
 }
 
 
